Rounded the images

--- a/home.html
+++ b/home.html
@@ -7,7 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <header>
-    </header>
+    <img src="images/welcome.jpg" alt="Welcome" width="530" height="320">
+    <img src="images/school.jpg" alt="school" width="530" height="320">
+    <img src="images/contact.jpg" alt="contact" width="430" height="320">
+    <img src="images/coderclass.jpg" alt="coderclass" width="305" height="305">
+    <img src="images/spotify.jpg" alt="spotify" width="455" height="305">
+    <img src="images/vacation.jpg" alt="vacation" width="405" height="305">
+    <img src="images/basketball.jpg" alt="bastelball" width="305" height="305">
+
+
   </body>
 </html>
