Added all the websites
With photos and menu bar

--- a/home.html
+++ b/home.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Homepage</title>
-    <link rel="stylesheet" href="css/opmaak.css" type="text/css">
+    <link rel="stylesheet" href="css/home.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <img src="images/welcome.jpg" alt="Welcome" width="530" height="320">
-    <img src="images/school.jpg" alt="school" width="530" height="320">
-    <img src="images/contact.jpg" alt="contact" width="430" height="320">
-    <img src="images/coderclass.jpg" alt="coderclass" width="305" height="305">
-    <img src="images/spotify.jpg" alt="spotify" width="455" height="305">
-    <img src="images/vacation.jpg" alt="vacation" width="405" height="305">
-    <img src="images/basketball.jpg" alt="bastelball" width="305" height="305">
-
+    <a href="welcome.html"><img src="images/welcome.jpg" alt="Welcome" width="530" height="320"></a>
+    <a href="school.html"><img src="images/school.jpg" alt="school" width="530" height="320"></a>
+    <a href="contact.html"><img src="images/contact.jpg" alt="contact" width="430" height="320"></a>
+    <a href="coderclass.html"><img src="images/coderclass.jpg" alt="coderclass" width="305" height="305"></a>
+    <a href="spotify.html"><img src="images/spotify.jpg" alt="spotify" width="455" height="305"></a>
+    <a href="vacation.html"><img src="images/vacation.jpg" alt="vacation" width="405" height="305"></a>
+    <a href="basketball.html"><img src="images/basketball.jpg" alt="bastelball" width="305" height="305"></a>
 
   </body>
 </html>
