--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Homepage</title>
     <link rel="stylesheet" href="css/home.css" type="text/css">
+    <link rel="icon" type="image/ico" href="images/house.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
