--- a/school.html
+++ b/school.html
@@ -2,21 +2,74 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Welcome</title>
+    <title>School</title>
     <link rel="stylesheet" href="css/opmaak.css" type="text/css">
+    <link rel="icon" type="image/ico" href="images/coderclass.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <img src="images/school.jpg" alt="Welcome">
+    <h1>School</h1>
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="welcome.html">Welcome</a></li>
       <li><a class="active" href="school.html">School</a></li>
       <li><a href="coderclass.html">Coderclass</a></li>
-      <li><a href="spotify.html">Spotify</a></li>
+      <li><a href="spotify.html">Music</a></li>
       <li><a href="basketball.html">Basketball</a></li>
       <li><a href="vacation.html">Vacation</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+
+    <table border="1">
+   <tr>
+     <td>Subjects</td>
+     <td>Houres/week</td>
+   </tr>
+  <tr>
+     <td>Mathematics</td>
+     <td>3</td>
+  </tr>
+   <tr>
+     <td>Fysics</td>
+     <td>2</td>
+  </tr>
+  <tr>
+    <td>Biology</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>Science</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>Informatics</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>Social studies</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>Cultural-artistical education</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>Dutch</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>English</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>French</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>PE</td>
+    <td>2</td>
+  </tr>
+  </table>
+
   </body>
 </html>
