--- a/spotify.html
+++ b/spotify.html
@@ -2,18 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Welcome</title>
+    <title>Music</title>
     <link rel="stylesheet" href="css/opmaak.css" type="text/css">
+    <link rel="icon" type="image/ico" href="images/spotify_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <img src="images/spotify.jpg" alt="Welcome">
+    <h1>Music</h1>
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="welcome.html">Welcome</a></li>
       <li><a href="school.html">School</a></li>
       <li><a href="coderclass.html">Coderclass</a></li>
-      <li><a class="active" href="spotify.html">Spotify</a></li>
+      <li><a class="active" href="spotify.html">Music</a></li>
       <li><a href="basketball.html">Basketball</a></li>
       <li><a href="vacation.html">Vacation</a></li>
       <li><a href="contact.html">Contact</a></li>
